# dittobench-starter-kit

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSING.md  PROTOCOL.md  README.md  SETUP.md  go.mod
.github/workflows/: ci.yml
fixtures/: memory.json
fixtures/models/: README.md  mlp-weights.meta.json
fixtures/seed-user/: manifest.json  memory_cases.json  pairs.json  subject_links.json  subjects.json
pkg/catalog/: catalog.go
pkg/datagen/: datagen.go  datagen_test.go
pkg/harness/: harness.go
pkg/mocktools/: mocktools.go
pkg/openrouter/: openrouter.go
pkg/protocol/: protocol.go
pkg/scorer/: scorer.go  scorer_test.go
scripts/: build-seed-user.py
src/: baseline.rs  catalog.rs  datagen.rs  judge.rs  lib.rs  playground.html  playground.rs  protocol.rs  reranker.rs  scorer.rs  seed.rs
